# Craft

./: .gitignore  CMakeLists.txt  README.md  http_server.py  index_shell.html
js/: .babelrc  index.js  package-lock.json  package.json  server.js  webpack.config.js  webpack.server.config.js
js/src/: Chunk.js  ClientCore.js  ClientModel.js  Defs.js  MasterCore.js  PlayerController.js  ServerCore.js  StructDefs.js  index.js
js/src/entities/: Entity.js  EntityTypes.js  PhysicsEntity.js  Player.js
js/src/entities/client/: ClientPlayer.js
js/src/gui/: GUI.js  NempGUIBuilder.js
js/src/gui/components/: ChatComponent.js
js/src/gui/controllers/: ChatController.js
js/src/interfaces/: ControlInterface.js  InputInterface.js  Interface.js  WorldInterface.js
js/src/network/: ClientServer.js  MasterServer.js  Server.js  ServerPlugin.js
js/src/network/plugins/: ClientCorePlugin.js  EntityPlugin.js  MasterCorePlugin.js  PlayerPlugin.js  ServerCorePlugin.js  ServerLogPlugin.js  TimeKeeperPlugin.js
js/src/network/plugins/client/: ChatPlugin.js  ClientCorePlugin.js  EntityPlugin.js  TimeKeeperPlugin.js  WorldPlugin.js
js/src/network/plugins/master/: ChatPlugin.js  EntityPlugin.js  MasterCorePlugin.js  WorldPlugin.js
js/src/util/: MemoryBackedObject.js  ObjectHelpers.js  ObjectPool.js  SerializedObject.js  StringUtils.js  UUID.js
js/src/world/: BodyPool.js  Chunk.js  ChunkLoader.js  ChunkManager.js  ChunkUtils.js  ClientChunkManager.js  DbChunkLoader.js  GenChunkLoader.js  NetChunkLoader.js  WorldNarrowphase.js  WorldPhysics.js  WorldStore.js  WorldVoxelPhysics.js  physicsMaterial.js
shaders/: block_fragment.glsl  block_vertex.glsl
src/: config.h  cube.c  cube.h  gen_main.c  item.c  item.h  main.c  map.c  map.h  matrix.c  util.c  util.h  world.c  world.h
